# vesta-core

./: .gitignore  .pre-commit-config.yaml  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  package-lock.json  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARGUS_SPEC.md  PRODUCTION_REVIEW.md  SECURITY_AUDIT.md  TECHNICAL_SPEC.md
docs/specs/: 01-funded-campaign-vaults.md  02-koinon-treasury-governance.md  03-coalition-campaigns.md  04-portable-alliance-status.md  05-decay-reward-mechanics.md  06-aegis-commitment-substrate.md  07-aegis-verify-and-policy.md  08-aegis-issuer-accreditation.md  09-argus-policy-vm.md  10-argus-enterprise-governance.md  11-merchant-accredited-identity.md  12-merchant-verified-segmentation.md  13-merchant-governance-integrity.md  README.md
idl/: aegis.json  argus.json  vesta_core.json
metadata/: README.md
metadata/aegis/: metadata.json  security.json
metadata/argus/: metadata.json  security.json
metadata/vesta_core/: metadata.json  security.json
programs/aegis/: Cargo.toml
programs/aegis/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/aegis/src/instructions/: accreditation.rs  attestation.rs  issuer.rs  policy.rs  schema.rs  verify.rs
programs/argus/: Cargo.toml
programs/argus/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/argus/src/instructions/: admin.rs  execute.rs  governance.rs  initialize_transfer_guard.rs  licensing.rs  open_gift_ledger.rs  open_wallet_state.rs  policy.rs  refresh_eligibility.rs  statements.rs  trust.rs
programs/vesta-core/: Cargo.toml
programs/vesta-core/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs  util.rs
programs/vesta-core/src/instructions/: achievements.rs  admin.rs  campaigns.rs  clawback.rs  earn_points.rs  finalize_transfer_guard.rs  init_config.rs  koinon.rs  merchant_admin.rs  merchant_reserve.rs  merchant_statements.rs  merchant_trust.rs  migrate_config.rs  offers.rs  register_merchant.rs  segmentation.rs  set_token_attribute.rs
programs/vesta-core/tests/: phase1.rs  phase2_guard.rs  phase3_gamification.rs  phase4_koinon.rs  test_init_config.rs
scripts/: aegis-demo.ts  earn-to-me.ts  init-config-devnet.ts  live-demo.ts  seed-demo.ts  seed-master.ts  spike-token2022.ts
