[package]
name = "aegis"
version = "2.0.0"
description = "VESTA attestation & trust layer: privacy-preserving commitments + verify interface"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.1.2"
solana-security-txt = "1.1.1"
solana-sha256-hasher = "3.1.0"

[lints]
workspace = true
