[package]
name = "argus"
version = "0.1.0"
description = "VESTA transfer hook guard: validates point transfers (whitelisted flows, gift limits)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "argus"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.1.2"
spl-discriminator = "0.5.2"
spl-tlv-account-resolution = "0.11.1"
spl-token-2022-interface = "2.1.0"
spl-transfer-hook-interface = "2.1.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints]
workspace = true
