[package]
name = "argus"
version = "2.0.0"
description = "VESTA transfer-hook policy engine: aegis-verified eligibility + velocity/list controls"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "argus"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
solana-security-txt = "1.1.1"
spl-discriminator = "0.5.2"
spl-tlv-account-resolution = "0.11.1"
spl-token-2022-interface = "2.1.0"
spl-transfer-hook-interface = "2.1.0"
solana-sha256-hasher = "3.1.0"
# argus consumes aegis's stable `verify` CPI (spec 07/09) — linked as a
# no-entrypoint lib (via the `cpi` feature) so only argus carries an entrypoint.
aegis = { path = "../aegis", default-features = false, features = ["cpi"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints]
workspace = true
