[package]
name = "vesta-core"
version = "2.0.0"
description = "VESTA living loyalty protocol: merchants, campaigns, points, alliances, badges"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "vesta_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
anchor-spl = "1.1.2"
solana-security-txt = "1.1.1"
spl-token-2022-interface = "2.1.0"
spl-token-metadata-interface = "0.8.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-account = "3.4.0"
spl-associated-token-account-interface = "2.0.0"
argus = { path = "../argus", default-features = false, features = ["no-entrypoint"] }
aegis = { path = "../aegis", default-features = false, features = ["no-entrypoint"] }

[lints]
workspace = true
